used for troubleshooting, analysis, development and education.

== What's New

=== Bug Fixes

The following bugs have been fixed:

//* ws-buglink:5000[]
//* ws-buglink:6000[Wireshark bug]
//* cve-idlink:2013-2486[]
//* Wireshark always manages to score tickets for Burning Man, Coachella, and SXSW while you end up working double shifts. (ws-buglink:0000[])

* Files with pcap-ng Simple Packet Blocks can't be read. (ws-buglink:9200[])

=== New and Updated Features

The following features are new (or have been significantly updated)
since version 1.10:

* Wireshark now uses the Qt application framework. The new UI should provide
  a significantly better user experience, particularly on Mac OS X and Windows.
* A more flexible, modular memory manger (wmem) has been added.
* Expert info is now filterable and now requires a new API.
* The Windows installer now uninstalls the previous version of Wireshark
  silently.  You can still run the uninstaller manually beforehand if you wish
  to run it interactively.
* The "Number" column shows related packets and protocol conversation spans
  (Qt only).
* When manipulating packets with editcap using the -C <choplen> and/or
  -s <snaplen> options, it is now possible to also adjust the original frame
  length using the -L option.
* You can now pass the -C <choplen> option to editcap multiple times, which
  allows you to chop bytes from the beginning of a packet as well as at the end
  of a packet in a single step.
* You can now specify an optional offset to the -C option for editcap, which
  allows you to start chopping from that offset instead of from the absolute
  packet beginning or end.
* "malformed" display filter has been renamed to "_ws.malformed".  A handful of
  other filters have been given the "_ws." prefix to note they are Wireshark
  application specific filters and not dissector filters.

=== New Protocol Support

--sort-and-group--

ASTERIX
SEL RTAC (Real Time Automation Controller) EIA-232 Serial-Line Dissection
UDT